# motion-blow

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  Makefile  RTIMULib.cmake  main.c
.github/workflows/: cmake-multi-platform.yml
cmake/: clang-cxx-dev-tools.cmake  eigen.cmake  gtest.cmake
code/: CMakeLists.txt
code/analysis/: CMakeLists.txt
code/analysis/src/: Integrator.cpp  IntegratorTests.cpp
code/aquisition/: CMakeLists.txt
code/aquisition/include/aquisition/: Device.hpp  ImuDevice.hpp  MeasurementHandler.hpp  MeasurementPrinter.hpp  MeasurementToCsvWriter.hpp  MeasurementToJsonWriter.hpp
code/aquisition/src/: Device.cpp  ImuDevice.cpp  MeasurementPrinter.cpp  MeasurementToCsvWriter.cpp  MeasurementToJsonWriter.cpp  QueueTests.cpp
code/cmake/: RTIMULib.cmake  clang-cxx-dev-tools.cmake
code/cut/: CMakeLists.txt
code/cut/include/cut/: Integrator.hpp
code/cut/src/: Integrator.cpp  IntegratorTests.cpp
code/include/motion_blow/: Device.hpp  ImuDevice.hpp  Queue.hpp  message.hpp
code/messages/: CMakeLists.txt
code/messages/include/measurement/: Measurement.hpp
code/messages/include/messages/: Measurement.hpp
code/messages/protos/: Measurement.proto
code/messages/src/: Measurement.cpp  MeasurementTests.cpp
code/motion_blow/: CMakeLists.txt
code/motion_blow/include/motion_blow/: Device.hpp  ImuDevice.hpp  MeasurementHandler.hpp  MeasurementPrinter.hpp  MeasurementToCsvWriter.hpp  MeasurementToJsonWriter.hpp  MeasurementWriter.hpp
code/motion_blow/src/: Device.cpp  ImuDevice.cpp  MeasurementPrinter.cpp  MeasurementToCsvWriter.cpp  MeasurementToJsonWriter.cpp  MeasurementWriter.cpp
code/network/: CMakeLists.txt
code/network/include/network/: TcpServer.hpp
code/network/src/: TcpServer.cpp
code/src/: Device.cpp  QueueTests.cpp  blow.cpp  chat_client.cpp  chat_server.cpp  client.cpp  server.cpp  srvMain.cpp
include/motion_blow/: Matrix.hpp  RotationMatrix.hpp  message.hpp
protocol/: Measurement.proto
src/: EigenCheck.cpp  Matrix.cpp  RotationMatrix.cpp  blow.cpp  chat_server.cpp
test/: MatrixTest.cpp  RotationMatrixTest.cpp
